--- a/style.css
+++ b/style.css
@@ -32,11 +32,13 @@ h1{
 .maintextbox{
 background-color: rgba(34, 139, 34, .8);
 text-align:center;
+min-width: 500px;
 }
 
 .donate{
 background-color: rgba(34, 139, 34, .6);
 text-align:center;
+min-width: 500px;
 }
 
 .maintext{
