--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ h1{
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
+
+.form-group{
+  margin: 20px;
+
+}
 .card{
   width: 300px;
   float: left;
